workspace = { members = [
    "session1/authentication",
    "session1/login",
    "session1/login_manager",
    "session1/variable",
    "session2/affinity",
    "session2/channels1",
    "session2/dashing",
    "session2/deadlocks",
    "session2/divide_work",
    "session2/footgun",
    "session2/hello-world",
    "session2/mutexes",
    "session2/parking",
    "session2/rayon_iters",
    "session2/rayon_scopes",
    "session2/rwlocks",
    "session2/scoped_threads",
    "session2/thread_builder",
    "session2/tprio",
    "session2/workers",
    "session2/workers2",
    "session3/hello_async", "session3/hello_tokio", "session3/hello_tokio2",
] }

[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
