workspace = { members = [
    "session1/authentication",
    "session1/login",
    "session1/login_manager",
    "session1/variable",
    "session2/affinity",
    "session2/channels1",
    "session2/dashing",
    "session2/deadlocks",
    "session2/divide_work",
    "session2/footgun",
    "session2/hello-world",
    "session2/mutexes",
    "session2/parking",
    "session2/rayon_iters",
    "session2/rayon_scopes",
    "session2/rwlocks",
    "session2/scoped_threads",
    "session2/thread_builder",
    "session2/tprio",
    "session2/workers",
    "session2/workers2",
    "session3/blocking",
    "session3/error",
    "session3/fileio",
    "session3/hello_async",
    "session3/hello_tokio",
    "session3/hello_tokio2",
    "session3/recursion",
    "session3/restclient",
    "session3/shared_state",
    "session3/tcpserver",
    "session3/tokio_channles",
    "session3/tokio_select",
    "session3/tokio_select_channles",
    "session3/tokio_testing",
] }

[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"
